fix breakpoint - sms template landscape on some phones layout bug fixed

--- a/EnhancingTrust/src/styles/components/Sms.scss
+++ b/EnhancingTrust/src/styles/components/Sms.scss
@@ -87,7 +87,7 @@
       z-index: 1;
     }
   }
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(sm) {
     width: 20.938rem;
     height: 43.125rem;
     &__content {
